--- a/PhotoViewer/Base.lproj/Main.storyboard
+++ b/PhotoViewer/Base.lproj/Main.storyboard
@@ -18,16 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E4b-eG-YzJ">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fa-XV-2EB">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="568" translatesAutoresizingMaskIntoConstraints="NO" id="E4b-eG-YzJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="E4b-eG-YzJ" firstAttribute="top" secondItem="2Fa-XV-2EB" secondAttribute="top" id="0jF-Al-exV"/>
+                                    <constraint firstItem="E4b-eG-YzJ" firstAttribute="bottom" secondItem="2Fa-XV-2EB" secondAttribute="bottom" id="AUj-NB-jh7"/>
+                                    <constraint firstItem="E4b-eG-YzJ" firstAttribute="leading" secondItem="2Fa-XV-2EB" secondAttribute="leading" id="cjN-Nk-Trc"/>
+                                    <constraint firstItem="E4b-eG-YzJ" firstAttribute="trailing" secondItem="2Fa-XV-2EB" secondAttribute="trailing" id="uh1-hm-WEB"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="E4b-eG-YzJ" firstAttribute="trailing" secondItem="y2a-A2-Y35" secondAttribute="trailing" id="8OU-bG-qpZ"/>
-                            <constraint firstItem="E4b-eG-YzJ" firstAttribute="bottom" secondItem="y2a-A2-Y35" secondAttribute="bottom" id="EjB-Ef-Fa4"/>
-                            <constraint firstItem="E4b-eG-YzJ" firstAttribute="leading" secondItem="y2a-A2-Y35" secondAttribute="leading" id="EoV-vZ-O7n"/>
-                            <constraint firstItem="E4b-eG-YzJ" firstAttribute="top" secondItem="y2a-A2-Y35" secondAttribute="top" id="Vp0-Ng-rPZ"/>
+                            <constraint firstItem="2Fa-XV-2EB" firstAttribute="bottom" secondItem="y2a-A2-Y35" secondAttribute="bottom" id="2Oj-Xe-Boc"/>
+                            <constraint firstItem="2Fa-XV-2EB" firstAttribute="leading" secondItem="y2a-A2-Y35" secondAttribute="leading" id="Jrg-lX-P7z"/>
+                            <constraint firstItem="2Fa-XV-2EB" firstAttribute="trailing" secondItem="y2a-A2-Y35" secondAttribute="trailing" id="TYo-ho-naR"/>
+                            <constraint firstItem="2Fa-XV-2EB" firstAttribute="top" secondItem="y2a-A2-Y35" secondAttribute="top" id="vmQ-lu-UMr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t7s-tc-NGz"/>
                     </view>
